manifests/deployment.yml
apiVersion : apps/v1beta1
kind: Deployment
metadata:
  name: "myakscluster"
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: "myakscluster"
    spec:
      containers:
        - name: "myakscluster"
          image: "acr11052020.azurecr.io/myakscluster"
          ports:
          - containerPort: 80
